# Sensor_Control

./: CMakeLists.txt  README.md
docs/Sensor_Integration_Images/: IMG_9891.HEIC  IMG_9947.HEIC  IMG_9979.HEIC  IMG_9984.HEIC  IMG_9986.HEIC  IMG_9987.HEIC
include/: dht11_temperature_humidity_sensor.hpp  hcsr04_ultrasonic_sensor.hpp  raindrop_sensor.hpp  sg90_servo_motor.hpp  sw420_vibration_sensor.hpp  sw520d_tilt_sensor.hpp
src/: dht11_temperature_humidity_sensor.cpp  hcsr04_ultrasonic_sensor.cpp  main.cpp  raindrop_sensor.cpp  sg90_servo_motor.cpp  sw420_vibration_sensor.cpp  sw520d_tilt_sensor.cpp
